# nailong-pet

./: CMakeLists.txt  README.md  align_content.py  align_frames.py  align_smile_frames.py  compute_body_bbox.py  nailong_debug.txt  normalize_assets.py  rename.py
assets/sounds/: README.txt
src/: main.cpp
